# design-patterns

./: README.md
concepts/: CMakeLists.txt  main.cpp
factoryMethod/: CMakeLists.txt  main.cpp
monitor-cpp/: CMakeLists.txt  main.cpp
monitor-golang/: monitor  monitor.go
singleton/: CMakeLists.txt  main.cpp
singleton/include/: cacheWithSingleton.h  serviceLocator.h
singleton/src/: cacheWithSingleton.cpp
threads/: CMakeLists.txt  main.cpp
